Map Creation Update

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -80,6 +80,10 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/NathanTestWithGenMap.NathanTestWithGenMap
+GameDefaultMap=/Game/Maps/NathanTestWithGenMap.NathanTestWithGenMap
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
