--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -83,6 +83,8 @@ AppliedDefaultGraphicsPerformance=Scalable
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/NathanTestWithGenMap.NathanTestWithGenMap
 GameDefaultMap=/Game/Maps/NathanTestWithGenMap.NathanTestWithGenMap
+bUseSplitscreen=False
+bOffsetPlayerGamepadIds=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -124,5 +126,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
