--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -81,10 +81,11 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/NathanTestWithGenMap.NathanTestWithGenMap
-GameDefaultMap=/Game/Maps/NathanTestWithGenMap.NathanTestWithGenMap
+EditorStartupMap=/Game/Maps/TitleScreen.TitleScreen
+GameDefaultMap=/Game/Maps/TitleScreen.TitleScreen
 bUseSplitscreen=False
 bOffsetPlayerGamepadIds=True
+GameInstanceClass=/Game/Blueprints/BP_IceGameInstance.BP_IceGameInstance_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
