--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -86,6 +86,7 @@ GameDefaultMap=/Game/Maps/TitleScreen.TitleScreen
 bUseSplitscreen=False
 bOffsetPlayerGamepadIds=True
 GameInstanceClass=/Game/Blueprints/BP_IceGameInstance.BP_IceGameInstance_C
+GlobalDefaultGameMode=/Game/IceMode.IceMode_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
