--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=CB6DBEC24760EBC89B1FC7A86C524D68
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+IncludeDebugFiles=True
+
