--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -40,6 +40,8 @@ bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Input Swing",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Input Swing",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Pause Menu",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Pause Menu",Key=Gamepad_Special_Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="Input Right",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="Input Right",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="Input Right",Key=A,Scale=-1.000000)
