Final touches to maps

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=CB6DBEC24760EBC89B1FC7A86C524D68
+Description=ffg
+ProjectName=Fr0z3nR's Frozengrounds
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "BCDF34C84C29832AEBF03E8DF2F0F089", "Fr0z3nR\'s FrozenGrounds")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 IncludeDebugFiles=True
-
