--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,4 +1,6 @@
 [URL]
+GameName=FrozenBattlegrounds
+
 [/Script/Engine.RendererSettings]
 r.MobileHDR=True
 r.Mobile.DisableVertexFog=True
@@ -87,6 +89,9 @@ bUseSplitscreen=False
 bOffsetPlayerGamepadIds=True
 GameInstanceClass=/Game/Blueprints/BP_IceGameInstance.BP_IceGameInstance_C
 GlobalDefaultGameMode=/Game/IceMode.IceMode_C
+
+[/Script/Engine.Engine]
++ActiveGameNameRedirects=(OldGameName="/Script/ue4jam", NewGameName="/Script/FrozenBattlegrounds")
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
