--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,4 +5,5 @@ ProjectName=Fr0z3nR's Frozengrounds
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "BCDF34C84C29832AEBF03E8DF2F0F089", "Fr0z3nR\'s FrozenGrounds")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-IncludeDebugFiles=True
+IncludeDebugFiles=False
+
