--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -91,7 +91,7 @@ GameInstanceClass=/Game/Blueprints/BP_IceGameInstance.BP_IceGameInstance_C
 GlobalDefaultGameMode=/Game/IceMode.IceMode_C
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="/Script/ue4jam", NewGameName="/Script/FrozenBattlegrounds")
++ActiveGameNameRedirects=(OldGameName="/Script/ue4Jam", NewGameName="/Script/FrozenBattlegrounds")
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
